<?xml version="1.0" encoding="UTF-8"?>

<!--
  Copyright (c) 2013, 2021, Oracle and/or its affiliates.
  Licensed under the Universal Permissive License v 1.0 as shown at
  https://oss.oracle.com/licenses/upl.
-->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<groupId>com.oracle.coherence.spring</groupId>
	<artifactId>coherence-spring-parent</artifactId>
	<version>3.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>Coherence Spring Project</name>

	<description>
		The Oracle Coherence Spring project provides support for using Spring
		with Coherence and vice-versa.
	</description>

	<url>https://github.com/coherence-community/coherence-spring</url>

	<issueManagement>
		<system>GitHub</system>
		<url>https://github.com/coherence-community/coherence-spring/issues</url>
	</issueManagement>

	<licenses>
		<license>
			<name>The Universal Permissive License (UPL), Version 1.0</name>
			<url>https://oss.oracle.com/licenses/upl</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Brian Oliver</name>
			<organization>Oracle Corporation</organization>
		</developer>

		<developer>
			<name>Patrick Peralta</name>
			<organization>Oracle Corporation</organization>
		</developer>

		<developer>
			<name>Gunnar Hillert</name>
			<organization>Oracle Corporation</organization>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:https://github.com/coherence-community/coherence-spring.git</connection>
		<developerConnection>scm:git:https://github.com/coherence-community/coherence-spring.git</developerConnection>
		<url>https://github.com/coherence-community/coherence-spring</url>
	</scm>

	<modules>
		<module>coherence-spring-core</module>
		<module>coherence-spring-boot-starter</module>
		<module>coherence-spring-tests</module>
		<module>coherence-spring-site</module>
		<module>coherence-spring-docs</module>
	</modules>

	<properties>
		<coherence.spring.root>${basedir}</coherence.spring.root>

		<!-- project options -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>1.8</java.version>
		<maven.minimum.version>3.6.0</maven.minimum.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<skip-sign-artifacts>true</skip-sign-artifacts>

		<!-- source code repository information -->
		<source.owner>coherence-community</source.owner>
		<source.repository>coherence-spring</source.repository>
		<source.branch>master</source.branch>

		<!-- plugin dependency versions (alphabetically) -->
		<doxia.module.markdown.version>1.0</doxia.module.markdown.version>
		<github.site.maven.plugin.version>0.12</github.site.maven.plugin.version>
		<maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
		<dependency-check-maven.version>6.0.4</dependency-check-maven.version>
		<maven.dependency.plugin.version>2.6</maven.dependency.plugin.version>
		<maven.deploy.plugin.version>2.8.2</maven.deploy.plugin.version>
		<maven.enforcer.plugin.version>1.3.1</maven.enforcer.plugin.version>
		<maven.gpg.plugin.version>1.6</maven.gpg.plugin.version>
		<maven.install.plugin.version>2.5.2</maven.install.plugin.version>
		<maven.jar.plugin.version>3.2.0</maven.jar.plugin.version>
		<maven.javadoc.plugin.version>3.2.0</maven.javadoc.plugin.version>
		<maven.release.plugin.version>2.5</maven.release.plugin.version>
		<maven.site.plugin.version>3.9.1</maven.site.plugin.version>
		<maven.source.plugin.version>3.2.1</maven.source.plugin.version>
		<maven.surefire.plugin.version>2.22.2</maven.surefire.plugin.version>

		<!-- dependency versions (alphabetically) -->
		<coherence.version>20.12</coherence.version>
		<hamcrest.version>2.2</hamcrest.version>
		<junit.version>5.7.0</junit.version>
		<mockito.version>1.9.5</mockito.version>
		<org.springframework.version>5.3.2</org.springframework.version>
	</properties>

	<distributionManagement>
		<snapshotRepository>
			<id>sonatype</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>sonatype</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>

	<repositories>
		<repository>
			<id>central</id>
			<url>https://repo1.maven.org/maven2/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>snapshots-repo</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.oracle.coherence.spring</groupId>
				<artifactId>coherence-spring-project</artifactId>
				<version>3.0.0-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-api</artifactId>
				<version>${junit.version}</version>
			</dependency>
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-engine</artifactId>
				<version>${junit.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.hamcrest</groupId>
				<artifactId>hamcrest</artifactId>
				<version>${hamcrest.version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.1</version>
					<configuration>
						<source>${java.version}</source>
						<target>${java.version}</target>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>${maven.deploy.plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.asciidoctor</groupId>
					<artifactId>asciidoctor-maven-plugin</artifactId>
					<version>1.6.0</version>
					<dependencies>
						<dependency>
							<groupId>org.asciidoctor</groupId>
							<artifactId>asciidoctorj-pdf</artifactId>
							<version>1.5.0-alpha.18</version>
						</dependency>
					</dependencies>
				</plugin>
				<plugin>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-maven-plugin</artifactId>
					<version>2.3.4.RELEASE</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-checkstyle-plugin</artifactId>
					<version>3.1.1</version>
					<dependencies>
						<dependency>
							<groupId>com.puppycrawl.tools</groupId>
							<artifactId>checkstyle</artifactId>
							<version>8.32</version>
						</dependency>
						<dependency>
							<groupId>io.spring.javaformat</groupId>
							<artifactId>spring-javaformat-checkstyle</artifactId>
							<version>0.0.27</version>
						</dependency>
					</dependencies>
					<executions>
						<execution>
							<id>checkstyle-validation</id>
							<phase>validate</phase>
							<inherited>true</inherited>
							<configuration>
								<configLocation>${coherence.spring.root}/src/checkstyle/checkstyle.xml</configLocation>
								<includeTestSourceDirectory>true</includeTestSourceDirectory>
							</configuration>
							<goals>
								<goal>check</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>${maven.enforcer.plugin.version}</version>
				<executions>
					<execution>
						<id>enforce-plugin-versions</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>${maven.minimum.version}</version>
								</requireMavenVersion>
								<requireJavaVersion>
									<version>${java.version}</version>
								</requireJavaVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven.compiler.plugin.version}</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven.surefire.plugin.version}</version>
				<configuration>
					<argLine>-Xms800m -Xmx800m -XX:MaxPermSize=500m</argLine>
					<includes>
						<include>**/*FunctionalTest.java</include>
						<include>**/*Test.java</include>
						<include>**/*Tests.java</include>
					</includes>
					<useSystemClassLoader>true</useSystemClassLoader>
					<useManifestOnlyJar>false</useManifestOnlyJar>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<executions>
					<execution>
						<id>copy-license</id>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<phase>process-sources</phase>
						<configuration>
							<outputDirectory>${project.build.outputDirectory}</outputDirectory>
							<resources>
								<resource>
									<directory>${coherence.spring.root}</directory>
									<targetPath>META-INF/</targetPath>
									<filtering>true</filtering>
									<includes>
										<include>LICENSE.txt</include>
										<include>THIRD_PARTY_LICENSES.txt</include>
									</includes>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>${maven.source.plugin.version}</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>package</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>${maven.javadoc.plugin.version}</version>
				<configuration>
					<source>${java.version}</source>
					<failOnError>false</failOnError>
				</configuration>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
						<inherited>true</inherited>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-install-plugin</artifactId>
				<version>${maven.install.plugin.version}</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>${maven.release.plugin.version}</version>
				<configuration>
					<autoVersionSubmodules>true</autoVersionSubmodules>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>${maven.gpg.plugin.version}</version>
				<configuration>
					<skip>${skip-sign-artifacts}</skip>
				</configuration>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>verify</phase>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>jdk9+</id>
			<activation>
				<jdk>[9,)</jdk>
			</activation>
			<properties>
				<maven.compiler.release>${java.version}</maven.compiler.release>
			</properties>
		</profile>
		<profile>
			<id>owasp</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.owasp</groupId>
						<artifactId>dependency-check-maven</artifactId>
						<version>${dependency-check-maven.version}</version>
						<configuration>
							<failBuildOnCVSS>7</failBuildOnCVSS>
							<skipProvidedScope>true</skipProvidedScope>
							<skipRuntimeScope>true</skipRuntimeScope>
							<skipTestScope>true</skipTestScope>
						</configuration>
						<executions>
							<execution>
								<goals>
									<goal>aggregate</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
